<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.example.sudokustar.view.custom.SudokuStarBoardView
        android:id="@+id/sudokuStarBoardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonsLayout"
        android:background="@color/white"
        />

    <GridLayout
        android:id="@+id/buttonsLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:layout_row="0"
            android:layout_column="1"/>

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:layout_row="0"
            android:layout_column="2"/>

        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:layout_row="1"
            android:layout_column="2"/>

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:layout_row="2"
            android:layout_column="0"/>

        <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:layout_row="2"
            android:layout_column="1"/>

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:layout_row="2"
            android:layout_column="2"/>

    </GridLayout>

</RelativeLayout>