<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameResultActivity" >

    <GridLayout
        android:id="@+id/gameResultLayout"
        android:layout_width="274dp"
        android:layout_height="330dp"
        android:layout_centerInParent="true"
        android:columnCount="1"
        android:rowCount="5"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/ResumeButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/resumeGame" />

        <Button
            android:id="@+id/RestartButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/restartGame" />

        <Button
            android:id="@+id/EasyButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/playEasy" />

        <Button
            android:id="@+id/MediumButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/playMedium" />

        <Button
            android:id="@+id/HardButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/playHard" />

    </GridLayout>

    <Button
        android:id="@+id/win_result"
        android:layout_width="324dp"
        android:layout_height="156dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:button="@android:color/transparent"
        android:singleLine="false"
        android:text="@string/win_result"
        android:textColor="@color/transparent"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/lose_result"
        android:layout_width="324dp"
        android:layout_height="156dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:button="@android:color/transparent"
        android:text="@string/lose_result"
        android:textColor="@color/transparent"
        android:textSize="15sp"
        android:singleLine="false"
        tools:ignore="SmallSp" />

</RelativeLayout>