<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeScreenActivity" >

    <GridLayout
        android:id="@+id/homeButtonsLayout"
        android:layout_width="281dp"
        android:layout_height="262dp"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:columnCount="1"
        android:rowCount="3"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/EasyButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/playEasy" />

        <Button
            android:id="@+id/MediumButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/playMedium" />

        <Button
            android:id="@+id/HardButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/playHard" />

    </GridLayout>

</RelativeLayout>